test/raw_tests/fails/purity_ko8.sol
contract C {
  int[] a;

  function pop() public view { /* pure/view forbidden... */
    a.pop();
  }

}